--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "eject": "react-scripts eject",
     "lint": "esw src",
     "lint:w": "npm run lint -- --watch",
-    "security-check": "nsp check"
+    "security-check": "nsp check",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
@@ -25,7 +27,9 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "eslint-watch": "^3.1.3",
+    "gh-pages": "^1.1.0",
     "griz": "^1.3.1",
     "styled-components": "^3.2.3"
-  }
+  },
+  "homepage": "http://shahids.me/kitabkhujun"
 }
